add apptimes directive, apply to placeholder component

--- a/src/app/elements/placeholder/placeholder.component.html
+++ b/src/app/elements/placeholder/placeholder.component.html
@@ -1,12 +1,9 @@
 <div class="ui placeholder">
-    <div class="image header">
+    <div *ngIf="header" class="image header">
         <div class="line"></div>
         <div class="line"></div>
     </div>
     <div class="paragraph">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+        <div *appTimes="lines" class="line"></div>
     </div>
 </div>
