add segmene component

--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,4 +1,17 @@
 <app-divider>
     Placeholder Component
 </app-divider>
+
 <app-placeholder></app-placeholder>
+
+<app-divider>
+    Segment Component
+</app-divider>
+<app-segment>
+    <header>
+        <i class="pdf file outline icon"></i>
+        No Documents are listed for this customer.
+    </header>
+
+    <button class="ui primary button">Add Document</button>
+</app-segment>
