add table styling and data

--- a/src/app/collections/table/table.component.html
+++ b/src/app/collections/table/table.component.html
@@ -1,1 +1,17 @@
-<p>table works!</p>
+<table [ngClass]="classNames" class="ui table">
+    <thead>
+        <tr>
+            <th *ngFor="let header of headers">
+                {{ header.label }}
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let record of data">
+            <td *ngFor="let header of headers">
+                <!-- look up header property for record, print out key -->
+                {{record[header.key]}}
+            </td>
+        </tr>
+    </tbody>
+</table>
