--- a/src/app/collections/collections-home/collections-home.component.html
+++ b/src/app/collections/collections-home/collections-home.component.html
@@ -1,2 +1,4 @@
 <app-divider>Table Component</app-divider>
 <app-table [data]="data" [headers]="headers" classNames="striped celled"></app-table>
+
+<router-outlet></router-outlet>
