--- a/src/app/collections/collections-home/collections-home.component.html
+++ b/src/app/collections/collections-home/collections-home.component.html
@@ -1,4 +1,28 @@
+<!-- Table -->
 <app-divider>Table Component</app-divider>
 <app-table [data]="data" [headers]="headers" classNames="striped celled"></app-table>
 
-<router-outlet></router-outlet>
+<!-- Tabs -->
+<app-divider>Tab Menu</app-divider>
+<div class="ui grid">
+    <div class="four wide column">
+        <div class="ui vertical fluid tabular menu">
+            <!-- './' means "give me the current route"  -->
+            <!-- using property binding ('[]') pieces together everything to make a link -->
+            <!-- routerlinkactiveoptions - checks if link is exact -->
+            <a 
+                class="item" 
+                [routerLink]="['./']" 
+                routerLinkActive="active"
+                [routerLinkActiveOptions] = "{ exact: true }"
+            >Biography</a>
+            <a class="item" routerLink="companies" routerLinkActive="active">Companies</a>
+            <a class="item" routerLink="partners" routerLinkActive="active">Partners</a>
+        </div>
+    </div>
+    <div class="twelve wide stretched column">
+        <div class="ui segment">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
