setup stats component & setup to recieve data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="ui secondary pointing menu">
     <a class="item" routerLinkActive="active" routerLink="/elements">Elements</a>
     <a class="item" routerLinkActive="active" routerLink="/collections">Collections</a>
+    <a class="item" routerLinkActive="active" routerLink="/views" >Views</a>
   </div>
   <div class="ui segment">
     <router-outlet></router-outlet>
