generate modal & mods home component, connect to app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a class="item" routerLinkActive="active" routerLink="/elements">Elements</a>
     <a class="item" routerLinkActive="active" routerLink="/collections">Collections</a>
     <a class="item" routerLinkActive="active" routerLink="/views" >Views</a>
+    <a class="item" routerLinkAvitve="active" routerLink="/mods">Mods</a>
   </div>
   <div class="ui segment">
     <router-outlet></router-outlet>
