--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -10,4 +10,4 @@
 </app-modal>
 
 <app-divider>Accordion Component</app-divider>
-<app-accordion></app-accordion>
+<app-accordion [items]="items"></app-accordion>
