--- a/src/app/mods/accordion/accordion.component.html
+++ b/src/app/mods/accordion/accordion.component.html
@@ -1,1 +1,12 @@
-<p>accordion works!</p>
+<div class="ui accordion styled">
+    <!-- ng-container to avoid wrapping title 7 content in same div -->
+    <ng-container *ngFor="let item of items; let i = index">
+        <div [ngClass]="{ active: i === openedItemIndex }" class="title" (click)="onClick(i)">
+            <i class="dropdown icon"></i>
+            {{ item.title }}
+        </div>
+        <div [ngClass]="{ active: i === openedItemIndex }" class="content">
+            <p>{{ item.content}}</p>
+        </div>
+    </ng-container>
+</div>
